--- a/mods/compressedcreativity.pw.toml
+++ b/mods/compressedcreativity.pw.toml
@@ -1,13 +1,13 @@
 name = "Compressed Creativity"
-filename = "compressedcreativity-1.18.2-0.1.5.jar"
+filename = "compressedcreativity-1.18.2-0.1.7.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Mt3rcQKj/versions/X59kmwEK/compressedcreativity-1.18.2-0.1.5.jar"
+url = "https://cdn.modrinth.com/data/Mt3rcQKj/versions/IFluZbak/compressedcreativity-1.18.2-0.1.7.jar"
 hash-format = "sha1"
-hash = "24785c358e69213f774f5f4136ff63a2bd5c37be"
+hash = "f9a1c17b948fbbf10f86d14d2ee766377034e394"
 
 [update]
 [update.modrinth]
 mod-id = "Mt3rcQKj"
-version = "X59kmwEK"
+version = "IFluZbak"
