--- a/mods/oculus.pw.toml
+++ b/mods/oculus.pw.toml
@@ -1,13 +1,13 @@
 name = "Oculus"
-filename = "oculus-1.5.2.jar"
-side = "both"
+filename = "oculus-mc1.18.2-1.6.4.jar"
+side = "client"
 
 [download]
+url = "https://cdn.modrinth.com/data/GchcoXML/versions/UynWw2df/oculus-mc1.18.2-1.6.4.jar"
 hash-format = "sha1"
-hash = "31faf299654b6618acd21008b1e3df7324ec9323"
-mode = "metadata:curseforge"
+hash = "9bafc5d3069d533c49a19b6f5bdb53637a1d47c2"
 
 [update]
-[update.curseforge]
-file-id = 4451905
-project-id = 581495
+[update.modrinth]
+mod-id = "GchcoXML"
+version = "UynWw2df"
