--- a/mods/patchouli.pw.toml
+++ b/mods/patchouli.pw.toml
@@ -3,11 +3,11 @@ filename = "Patchouli-1.18.2-71.1.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/nU0bVIaL/versions/1.18.2-71.1-forge/Patchouli-1.18.2-71.1.jar"
 hash-format = "sha1"
 hash = "89e1aa7994794a3476ef6de31461eb1ce78da02d"
-mode = "metadata:curseforge"
 
 [update]
-[update.curseforge]
-file-id = 3846086
-project-id = 306770
+[update.modrinth]
+mod-id = "nU0bVIaL"
+version = "VReLlKMv"
