--- a/mods/textrues-rubidium-options.pw.toml
+++ b/mods/textrues-rubidium-options.pw.toml
@@ -1,13 +1,13 @@
 name = "TexTrue's Rubidium Options"
-filename = "TextruesRubidiumOptions-1.0.5-mc1.18.2.jar"
+filename = "TextruesRubidiumOptions-1.0.6-mc1.18.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nm57myYP/versions/wUVMQhUL/TextruesRubidiumOptions-1.0.5-mc1.18.2.jar"
+url = "https://cdn.modrinth.com/data/nm57myYP/versions/O6vzBwI8/TextruesRubidiumOptions-1.0.6-mc1.18.2.jar"
 hash-format = "sha1"
-hash = "42f15a885b51f1d1f8390aa0638ccdf67ea2fb51"
+hash = "7a8eda930d7de7530327a1a04223fc8039bbedca"
 
 [update]
 [update.modrinth]
 mod-id = "nm57myYP"
-version = "wUVMQhUL"
+version = "O6vzBwI8"
